vbnc/vbnc/tests/Errors/30038-1.vb
Imports System
Imports System.IO
Public Module modmain
    Dim f As Object
    Sub Main()
        Do While f

        Loop
    End Sub
End Module